[package]
name = "victor"
version = "0.1.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT"
description = "Victor makes vectors"
repository = "https://github.com/SimonSapin/victor"

[lib]
doctest = false

[dependencies]
xml-rs = "0.3.2"
matches = "0.1"
selectors = "0.5"
string_cache = "0.2"
