[package]
name = "lester"
version = "0.0.1"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT AND GPL-2.0"  # See LICENSE.md file
description = "Lester, Victor’s cousin, makes raster graphics"
repository = "https://github.com/SimonSapin/victor"

[lib]
test = false
doctest = false

[build-dependencies]
pkg-config = "0.3.9"
