[package]
name = "lester"
version = "0.0.1"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT OR Apache-2.0"
description = """
Lester, Victor’s cousin, makes raster graphics.
It renders PDF files (such as produced by Victor) to in-memory pixel buffers or PNG,
using poppler-glib and cairo."""
repository = "https://github.com/SimonSapin/victor"

[lib]
test = false

[build-dependencies]
pkg-config = "0.3.9"
