[package]
name = "victor-internal-proc-macros"
version = "0.0.1"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT OR Apache-2.0"
description = "Custom #[derive] for use inside Victor"
repository = "https://github.com/SimonSapin/victor"

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
syn = "0.12"
quote = "0.4"
