[package]
name = "victor-tests"
version = "0.0.1"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
description = "Tests for Victor, using Lester"
repository = "https://github.com/SimonSapin/victor"
license = "(MIT OR Apache-2.0) AND (GPL-2.0 OR GPL-3.0)"

[lib]
path = "tests.rs"
doctest = false

[dependencies]
lester = {path = "../lester"}
victor = {path = "../victor"}
