[package]
name = "victor"
version = "0.0.1"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT OR Apache-2.0"
description = "Victor makes vectors"
repository = "https://github.com/SimonSapin/victor"

[lib]
doctest = false

[dependencies]
dtoa = "0.4"
euclid = "0.17"
itoa = "0.3"
num-traits = "0.1"
parking_lot_core = "0.1"
victor-internal-proc-macros = {path = "../proc-macros"}
xi-unicode = "0.1"
