[package]
name = "victor"
version = "0.0.1"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT OR Apache-2.0"
description = "Victor makes vectors"
repository = "https://github.com/SimonSapin/victor"
edition = "2018"

[lib]
doctest = false

[dependencies]
atomic_refcell = "0.1"
cssparser = "0.25.2"
dtoa = "0.4"
euclid = "0.19"
html5ever = "0.22"
itoa = "0.4"
lazy_static = "1.3"
lock_api = "0.1"
matches = "0.1"
num-traits = "0.2"
parking_lot = "0.6"
rayon = "1"
rayon_croissant = "0.1.1"
selectors = "0.21"
smallbitvec = "2.4"
smallvec = "0.6"
victor-internal-proc-macros = {path = "../proc-macros"}
xi-unicode = "0.1"
xml-rs = {package = "xml-rs", version = "0.8"}
